force-app/main/default/objects/SupportTicketComment__c/SupportTicketComment__c.object-meta.xml
<CustomObject>
    <label>Support Ticket Comment</label>
    <pluralLabel>Support Ticket Comments</pluralLabel>
    <nameField>
        <label>Support Ticket Comment Number</label>
        <type>AutoNumber</type>
        <displayFormat>SU-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>