force-app/main/default/objects/SupportTicketComment__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <type>Text</type>
    <length>120</length>
</CustomField>