force-app/main/default/objects/SupportTicketComment__c/fields/Comment_Text__c.field-meta.xml
<CustomField>
    <fullName>Comment_Text__c</fullName>
    <label>Comment Text</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>