force-app/main/default/objects/SupportTicketComment__c/fields/SupportTicket__c.field-meta.xml
<CustomField>
    <fullName>SupportTicket__c</fullName>
    <label>Support Ticket</label>
    <type>MasterDetail</type>
    <referenceTo>SupportTicket__c</referenceTo>
    <relationshipName>SupportTickets</relationshipName>
</CustomField>